--- a/index_files/survey.html
+++ b/index_files/survey.html
@@ -1,6 +1,6 @@
 
-<!-- saved from url=(0034)https://synocdn.com/js/survey.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<!-- saved from url=(0058)https://ionutgaibar.github.io/Site/index_files/survey.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
 <script type="text/javascript">
